--- a/datos-desequilibrados-de-laboratorio.ipynb
+++ b/datos-desequilibrados-de-laboratorio.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "7a05a2ea",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "c060fec1",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "effd9c32",
    "metadata": {},
    "outputs": [
@@ -622,7 +622,7 @@
        "[7043 rows x 21 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "ec19acc5",
    "metadata": {},
    "outputs": [
@@ -643,7 +643,7 @@
        "(7043, 21)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "9804dd8b",
    "metadata": {},
    "outputs": [
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "c78fec15",
    "metadata": {},
    "outputs": [
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "9da9c224",
    "metadata": {},
    "outputs": [
@@ -730,7 +730,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "f89d9777",
    "metadata": {},
    "outputs": [],
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "ab793e3f",
    "metadata": {},
    "outputs": [],
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "6eaafd0d",
    "metadata": {},
    "outputs": [
@@ -778,8 +778,8 @@
       "Dep. Variable:                  Churn   No. Observations:                 7043\n",
       "Model:                          Logit   Df Residuals:                     7039\n",
       "Method:                           MLE   Df Model:                            3\n",
-      "Date:                Thu, 02 May 2024   Pseudo R-squ.:                  0.2232\n",
-      "Time:                        17:49:51   Log-Likelihood:                -3165.7\n",
+      "Date:                Sat, 11 May 2024   Pseudo R-squ.:                  0.2232\n",
+      "Time:                        20:08:52   Log-Likelihood:                -3165.7\n",
       "converged:                       True   LL-Null:                       -4075.1\n",
       "Covariance Type:            nonrobust   LLR p-value:                     0.000\n",
       "==================================================================================\n",
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "21b08c22",
    "metadata": {},
    "outputs": [],
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "6a21810f",
    "metadata": {},
    "outputs": [],
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "8da43245",
    "metadata": {},
    "outputs": [
@@ -880,7 +880,7 @@
        "array([0, 0, 0, ..., 0, 0, 0], dtype=int64)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "08000eaf",
    "metadata": {},
    "outputs": [
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "bfd5f49c",
    "metadata": {},
    "outputs": [
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "31ba0460",
    "metadata": {},
    "outputs": [
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "acd4cde3",
    "metadata": {},
    "outputs": [
@@ -1131,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "13855529",
    "metadata": {},
    "outputs": [
@@ -1157,19 +1157,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "85380227",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'imblearn'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[20], line 5\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# 8. Synthetic Minority Oversampling TEchnique (SMOTE) is an over sampling technique based on nearest neighbors that adds \u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# new points between existing points. Apply imblearn.over_sampling.SMOTE to the dataset. \u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# Build and evaluate the logistic regression model. Is it there any improvement?\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mimblearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mover_sampling\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m SMOTE\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel_selection\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m train_test_split\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlinear_model\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m LogisticRegression\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'imblearn'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7410628019323672\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.74      0.74      0.74      1021\n",
+      "           1       0.74      0.74      0.74      1049\n",
+      "\n",
+      "    accuracy                           0.74      2070\n",
+      "   macro avg       0.74      0.74      0.74      2070\n",
+      "weighted avg       0.74      0.74      0.74      2070\n",
+      "\n"
      ]
     }
    ],
